# python-to-life

./: pyproject.toml
src/life_to_python/conditions/: if_else_conditions.py  list_with_conditions.py  match_conditions.py
src/life_to_python/functions/: functions.py
src/life_to_python/loops/: for_loop.py  index_values_loop.py
src/life_to_python/oop/: book.py  inheritance.py  library.py
src/life_to_python/variables/: basics.py  datatypes.py
